<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <EditText
            android:id="@+id/edit_task_title"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="@dimen/big_padding"
            android:layout_weight="2"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_delete"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:background="@color/colorAccent"
            android:textColor="@color/buttonLabel"
            app:backgroundTint="@null"
            android:text="@string/string_delete"/>

    </LinearLayout>


    <EditText
        android:id="@+id/edit_task_body"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/big_padding"
        android:layout_weight="2"
        android:fontFamily="sans-serif-light"
        android:hint="@string/default_body_text"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_date"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:hint="@string/string_due_date"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_time"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_margin="@dimen/big_padding"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="@string/string_due_time"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pick_date"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textColor="@color/buttonLabel"
            android:background="@color/colorPrimary"
            android:text="@string/string_pick_date" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/btn_pick_time"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:background="@color/colorPrimary"
            android:textColor="@color/buttonLabel"
            android:text="@string/string_pick_time" />
    </LinearLayout>




    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20dp"
            android:paddingHorizontal="8dp"
            android:text="@string/string_recurrence"/>

        <Spinner
            android:id="@+id/spinner_recurring"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_is_completed"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="8dp"
        android:text="@string/string_is_completed" />

    <Button
        android:id="@+id/button_save"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/big_padding"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />

</LinearLayout>
